init hero on start, broadcast position

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         socket.on('connected', function() {
             $('#loading').hide();
             $('#loaded').show();
+            socket.emit('init_hero')
         });
         socket.on('response', function(r) {
             console.log(r);
