fight with wolf

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
             socket.emit('move_right');
         }
 
+        function attack()
+        {
+            socket.emit('fight_attack', {eid: 0, eit: 'm'});
+        }
+
         function showHeroes()
         {
             socket.emit('debug_logged_show_heroes', function(d) {
@@ -69,6 +74,7 @@
 </div>
 <div id="loaded" style="display: none; width:100%; height:100%; background:yellow; position:absolute; top:0; left: 0; right:0; bottom:0;">
     <button onclick="left()" style="position: absolute; left: 0; top: 50px;">LEFT</button>
+    <button onclick="attack()" style="position: absolute; left: 50%; margin-left:-20px; top: 50px;">ATTACK</button>
     <button onclick="right()" style="position: absolute; right:0; top: 50px;">RIGHT</button>
     <div style="position: absolute; top: 100px;">
         <button onclick="who()">WHO AM I</button>
