Fight with mob - not finished

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         function attack()
         {
-            socket.emit('fight_attack', {eid: 0, eit: 'm'});
+            socket.emit('fight_attack', {eid: 0, et: 'm'});
         }
 
         function showHeroes()
