fight with enemy on cron, real time

--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,7 @@
         <button onclick="left()" style="position: absolute; left: 0; top: 50px;">LEFT</button>
         <div style="position: absolute; left: 50%; margin-left:-50px; top: 50px;">
             <button id="attack-button">ATTACK</button>
-            <input id="enemy-id-input" style="width:30px">
+            <input id="enemy-id-input" style="width:30px" value="1">
         </div>
         <button onclick="right()" style="position: absolute; right:0; top: 50px;">RIGHT</button>
         <div style="position: absolute; top: 100px;">
